// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. pull quote in culture magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.IS1 {
  margin-left: -3;
  font-family: Flama-Bold;
  font-size: 75;
  margin-bottom: -40px;
  margin-top: 0;
  color: #696969;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS4 {
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 20;
  margin-top: 10px;
}

.IS5 {
  margin-bottom: 15px;
  margin-top: 0;
}
</style>

<blockquote
  url=""
>
  <div
    className="c0 IS5"
  >
    <div
      className="c1 IS1"
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="c0 IS4"
    >
      <div
        className="c1 IS2"
      >
        A caption
      </div>
      <div
        className="c1 IS3"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`2. pull quote in style magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.IS1 {
  margin-left: -5;
  font-family: CenturyGothic-Bold;
  font-size: 75;
  margin-bottom: -40px;
  margin-top: 0;
  color: #696969;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS4 {
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 20;
  margin-top: 10px;
}

.IS5 {
  margin-bottom: 15px;
  margin-top: 0;
}
</style>

<blockquote
  url=""
>
  <div
    className="c0 IS5"
  >
    <div
      className="c1 IS1"
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="c0 IS4"
    >
      <div
        className="c1 IS2"
      >
        A caption
      </div>
      <div
        className="c1 IS3"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`3. pull quote in the sunday times magazine 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c1 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font: 14px system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

.c2 cite {
  font-style: normal;
}

@media (min-width:768px) {
  .c2 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.IS1 {
  margin-left: -2;
  font-family: Tiempos-Headline-Bold;
  font-size: 75;
  margin-bottom: -40px;
  margin-top: 0;
  color: #696969;
}

.IS2 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 13px;
  color: #696969;
  margin-bottom: 0;
}

.IS4 {
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 20;
  margin-top: 10px;
}

.IS5 {
  margin-bottom: 15px;
  margin-top: 0;
}
</style>

<blockquote
  url=""
>
  <div
    className="c0 IS5"
  >
    <div
      className="c1 IS1"
    >
      “
    </div>
    <div
      className="c2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="c0 IS4"
    >
      <div
        className="c1 IS2"
      >
        A caption
      </div>
      <div
        className="c1 IS3"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;
